using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constant
{
    public static string MainScene = "MainScene";
    public static string GamePlay = "GamePlay";

    public static string Vertical = "Vertical";
    public static string Horizontal = "Horizontal";
    public static string Forward = "Forward";
          public static string IsShake = "IsShake";
    public static string IsJump = "IsJump";
    public static string OnGround = "OnGround"; 
    public static string isActive = "isActive"; 
    public static string Charactor = "Charactor";
    public static string Item = "Item";





}
